adding apple controller
